--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "WebMason",
+  "name": "WebMason Universe",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
